--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AI TL;DR",
-  "name": "AI TL;DR Generator",
+  "short_name": "TL;DR AI",
+  "name": "TL;DR AI",
   "icons": [
     {
       "src": "favicon.ico",
