--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "remark-gfm": "^4.0.1",
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "validator": "^13.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
