--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 REACT_APP_API_URL = http://localhost:3001
-REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_AB12CD34567EF890
+REACT_APP_CLERK_PUBLISHABLE_KEY = pk_test_AB12CD34567EF890
