--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.3",
     "remark-gfm": "^4.0.1",
     "sass": "^1.84.0",
